2010-02-18  Mike Krüger  <mkrueger@novell.com>

	* Styles/TangoLightStyle.xml:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/TextEditorData.cs:
	* Mono.TextEditor.Highlighting/Style.cs: Worked on search &
	  replace.

2010-02-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: fixed null ref.

2010-02-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: fixed possible
	  null reference.

2010-02-18  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Remove debug code.

2010-02-18  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Enable pixbuf animation
	  scaling on Mac since it seem to work now the drawable is a
	  pixmap.

2010-02-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: worked on search result
	  animation.

2010-02-18  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Tweak search result animation
	  a bit. Use pixbuf scaling instead of re-rendering text
	  larger - avoid jarring from snapping. Disabled on Mac
	  because drawable-to-pixmap rendering broken there.

2010-02-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor.csproj: Fix file format issue.

2010-02-17  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/ClipboardActions.cs: Fixed 'Bug 580395 -
	  Exception when deleting several lines in a C# file'.

2010-02-17  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor/FoldingScreenbackgroundRenderer.cs: Worked
	  on new search result animation.

2010-02-16  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj:
	* Styles/IrBlackStyle.xml: Added IR Black style from Anirudh
	  Sanjeev.

2010-02-16  Michael Hutchinson  <mhutchinson@novell.com>
