@@ -1,5 +1,10 @@
 2010-02-18  Mike Krüger  <mkrueger@novell.com>
 
+	* Mono.TextEditor/TextEditor.cs: Only request caret blink on
+	  caret move when the text editor has the focus.
+
+2010-02-18  Mike Krüger  <mkrueger@novell.com>
+
 	* Styles/TangoLightStyle.xml:
 	* Mono.TextEditor/TextEditor.cs:
 	* Mono.TextEditor/TextViewMargin.cs:
